[package]
name = "mob"
version = "0.1.0"
edition = "2021"
categories = ["game-engines"]
exclude = ["tools/", "crates/"]
keywords = ["game", "engine", "gamedev"]
rust-version = "1.81.0"

[workspace]
exclude = []
members = [
    "crates/*",
]

[dependencies]
glam = "0.29.0"
image = "0.25.2"
log = "0.4.22"
mint = "0.5.9"
rodio = "0.19.0"
serde = "1.0.210"
winit = { version = "0.30.5", features = ["serde"] }


[dev-dependencies]
